# osc-placement

./: .coveragerc  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst
doc/source/cli/: index.rst
doc/source/user/: index.rst
osc_placement/: __init__.py  http.py  plugin.py  version.py
osc_placement/resources/: aggregate.py  allocation.py  allocation_candidate.py  common.py  inventory.py  resource_class.py  resource_provider.py  trait.py  usage.py
osc_placement/tests/functional/: base.py  test_aggregate.py  test_allocation.py  test_allocation_candidate.py  test_inventory.py  test_plugin.py  test_resource_class.py  test_resource_provider.py  test_trait.py  test_usage.py
osc_placement/tests/functional/hooks/: post_test_hook.sh
osc_placement/tests/unit/: test_allocation.py  test_http.py  test_plugin.py  test_version.py
playbooks/legacy/osc-placement-dsvm-functional/: run.yaml
playbooks/legacy/osc-placement-dsvm-functional-py3/: post.yaml  run.yaml
releasenotes/notes/: allocation-unset-beb0d904c8bc4228.yaml  allocation-unset-resource-3ff87787eca13f18.yaml  commands-v1.0.0-894ea659825b3757.yaml  deprecate-version-attribute-150863e7fa273c8b.yaml  drop-python-2-df59500ad303a56c.yaml  microversion-1.10-03ab71969921a0e4.yaml  microversion-1.14-support-nested-resource-providers-296961cc93ef30e8.yaml  microversion-1.16-alloc-candidates-limit-8310675ecc99a82a.yaml  microversion-1.17-alloc-candidates-required-traits-57378c735d0beeb4.yaml  microversion-1.18-resource-provider-required-traits-2ff846221bb297b9.yaml  microversion-1.19-resource-provider-aggregate-generation-c276739ec1cbc549.yaml  microversion-1.21-allocation-candidates-aggregate-3460414fa6819b7f.yaml  microversion-1.22-forbidden-traits-bc7acaf3006829a5.yaml  microversion-1.24-member-of-fbabd395a0048e87.yaml  microversion-1.25-granular-requests-f10936c700dee06f.yaml  microversion-1.28-alloc-consumer-gen-83cef07e274a1a1d.yaml  microversion-1.3-and-1.4-becd8058c9dd9ad8.yaml  microversion-1.39-any-traits-da32e4ef7c9ac6b7.yaml  microversion-1.5-0c6342c887669b8e.yaml  microversion-1.6-54a85ef9ae79f15d.yaml  microversion-1.7-6be2dadd0b27910f.yaml  microversion-1.8-1.9-db26e40571292353.yaml  resource-provider-inventory-set-aggregate-5f2239dd2685b636.yaml  resource-provider-inventory-set-amend-2349ea7a7dd5a43a.yaml  resource-provider-inventory-set-dryrun-18cf5e3a62f00938.yaml  show-usage-in-inventory-31eb87a6d243fc5a.yaml
releasenotes/source/: conf.py  index.rst
