[metadata]
name = osc-placement
summary = OpenStackClient plugin for the Placement service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    osc_placement

[entry_points]
openstack.cli.extension =
    placement = osc_placement.plugin

openstack.placement.v1 =
    resource_provider_create = osc_placement.resources.resource_provider:CreateResourceProvider
    resource_provider_list   = osc_placement.resources.resource_provider:ListResourceProvider
    resource_provider_show   = osc_placement.resources.resource_provider:ShowResourceProvider
    resource_provider_set    = osc_placement.resources.resource_provider:SetResourceProvider
    resource_provider_delete = osc_placement.resources.resource_provider:DeleteResourceProvider
    resource_provider_inventory_set       = osc_placement.resources.inventory:SetInventory
    resource_provider_inventory_class_set = osc_placement.resources.inventory:SetClassInventory
    resource_provider_inventory_list      = osc_placement.resources.inventory:ListInventory
    resource_provider_inventory_show      = osc_placement.resources.inventory:ShowInventory
    resource_provider_inventory_delete    = osc_placement.resources.inventory:DeleteInventory

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = osc_placement/locale
domain = osc_placement

[update_catalog]
domain = osc_placement
output_dir = osc_placement/locale
input_file = osc_placement/locale/osc_placement.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = osc_placement/locale/osc_placement.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
