[metadata]
name = osc-placement
summary = OpenStackClient plugin for the Placement service
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/osc-placement/latest/
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[files]
packages =
    osc_placement

[entry_points]
openstack.cli.extension =
    placement = osc_placement.plugin

openstack.placement.v1 =
    resource_provider_allocation_set    = osc_placement.resources.allocation:SetAllocation
    resource_provider_allocation_unset  = osc_placement.resources.allocation:UnsetAllocation
    resource_provider_allocation_show   = osc_placement.resources.allocation:ShowAllocation
    resource_provider_allocation_delete = osc_placement.resources.allocation:DeleteAllocation
    resource_provider_create = osc_placement.resources.resource_provider:CreateResourceProvider
    resource_provider_list   = osc_placement.resources.resource_provider:ListResourceProvider
    resource_provider_show   = osc_placement.resources.resource_provider:ShowResourceProvider
    resource_provider_set    = osc_placement.resources.resource_provider:SetResourceProvider
    resource_provider_delete = osc_placement.resources.resource_provider:DeleteResourceProvider
    resource_provider_usage_show  = osc_placement.resources.usage:ShowUsage
    resource_usage_show  = osc_placement.resources.usage:ResourceShowUsage
    resource_provider_inventory_set       = osc_placement.resources.inventory:SetInventory
    resource_provider_inventory_class_set = osc_placement.resources.inventory:SetClassInventory
    resource_provider_inventory_list      = osc_placement.resources.inventory:ListInventory
    resource_provider_inventory_show      = osc_placement.resources.inventory:ShowInventory
    resource_provider_inventory_delete    = osc_placement.resources.inventory:DeleteInventory
    resource_provider_aggregate_list = osc_placement.resources.aggregate:ListAggregate
    resource_provider_aggregate_set = osc_placement.resources.aggregate:SetAggregate
    resource_class_list = osc_placement.resources.resource_class:ListResourceClass
    resource_class_create = osc_placement.resources.resource_class:CreateResourceClass
    resource_class_set = osc_placement.resources.resource_class:SetResourceClass
    resource_class_show = osc_placement.resources.resource_class:ShowResourceClass
    resource_class_delete = osc_placement.resources.resource_class:DeleteResourceClass
    trait_list = osc_placement.resources.trait:ListTrait
    trait_show = osc_placement.resources.trait:ShowTrait
    trait_create = osc_placement.resources.trait:CreateTrait
    trait_delete = osc_placement.resources.trait:DeleteTrait
    resource_provider_trait_list = osc_placement.resources.trait:ListResourceProviderTrait
    resource_provider_trait_set = osc_placement.resources.trait:SetResourceProviderTrait
    resource_provider_trait_delete = osc_placement.resources.trait:DeleteResourceProviderTrait
    allocation_candidate_list = osc_placement.resources.allocation_candidate:ListAllocationCandidate

